# MOD16

./: LICENSE  README.md  pyproject.toml  setup.cfg
data/: MOD16_BPLUT_C5.1_05deg_MCD43B_Albedo_MERRA_GMAO.txt
docs/: build.sh  calibration.html  index.html  sensitivity.html  utils.html
mod16/: __init__.py  calibration.py  models.py  sensitivity.py  utils.py
mod16/data/: MOD16_BPLUT_C5.1_05deg_MCD43B_Albedo_MERRA_GMAO.csv  MOD16_BPLUT_C7.0_05deg_MCD43B_Albedo_MERRA.csv  MOD16_BPLUT_CX.X_05deg_MCD43B_Albedo_MERRA.csv  MOD16_BPLUT_CX.X_05deg_MCD43B_Albedo_MERRA_Maosheng.csv  MOD16_BPLUT_prior_20220601.json  MOD16_BPLUT_prior_20231218.json  MOD16_BPLUT_prior_20231218.yaml  MOD16_BPLUT_prior_20240119_TA.json  MOD16_BPLUT_prior_20240415.yaml  MOD16_BPLUT_prior_20240423.yaml  MOD16_BPLUT_prior_above_et_20240123.yaml  MOD16_calibration_config.json  MOD16_calibration_config.yaml  MOD16_calibration_config_2024.yaml  MOD16_calibration_config_Boreal.yaml  MOD16_calibration_config_Gullveig.json  MOD16_calibration_config_Scabbard.json  MOD16_calibration_config_TA.json  MOD16_calibration_config_above_et.yaml  VNP16_BPLUT_CX.X_05deg_MCD43B_Albedo_MERRA.csv  VNP16_BPLUT_prior_20250902.yaml  VNP16_calibration_config_Gullveig.json
notebooks/: MOD16_Calibration_MCMC_Tutorial.ipynb  MOD16_Forward_Run_example.ipynb
tests/: tests.py
tests/verification/: baresoil.c  canopy.c  transpiration.c  verify.py  verify2.py
